kontrol noktasi olusturuldu - 4
